--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #59fddc; }
+  background: #28fb9f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #b69797; }
+  background: #ded21b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #08692e; }
+  background: #063651; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7ebfe5; }
+  background: #a66870; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #6412f9; }
+  background: #bbd6a7; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #5c2ad2; }
+  background: #3f38fa; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d94808; }
+  background: #f8eba2; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bd84d4; }
+  background: #d61c53; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #57eaaa; }
+  background: #641ae7; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1c4691; }
+  background: #7889c7; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #db5ffb; }
+  background: #9cf116; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f4c605; }
+  background: #11c6d5; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ce7a86; }
+  background: #c58f59; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0df393; }
+  background: #04f04d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a5f4a5; }
+  background: #31ac52; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #72aa7c; }
+  background: #26780f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ffcc26; }
+  background: #6346da; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #cb32fc; }
+  background: #63fb2c; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ee4ec8; }
+  background: #24c498; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3bdb31; }
+  background: #3ee3cf; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #781edd; }
+  background: #8abd7e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f7d242; }
+  background: #89b87c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f0e2e7; }
+  background: #6757fe; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #99ba6a; }
+  background: #543ec1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #96a6ef; }
+  background: #5d6afd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1a496e; }
+  background: #861f04; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2f16a2; }
+  background: #aa2564; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1135ca; }
+  background: #42920b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #5da791; }
+  background: #384842; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f955b7; }
+  background: #78a0c6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #84541d; }
+  background: #737ff6; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #b44e49; }
+  background: #07fb85; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #39dc1c; }
+  background: #571189; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d34592; }
+  background: #d81d7d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #258484; }
+  background: #7e5a64; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #0dc7ca; }
+  background: #b99b6a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ec5877; }
+  background: #a2d065; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #284d41; }
+  background: #e60a39; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5003da; }
+  background: #9cd37f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #30f8a8; }
+  background: #e5a1f0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #33f85b; }
+  background: #f644b1; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #342937; }
+  background: #74b075; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c88230; }
+  background: #edace2; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #74861c; }
+  background: #da7cd1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #561b9e; }
+  background: #9fa091; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #cf61de; }
+  background: #b1bed5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #4ef86c; }
+  background: #c6f631; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e07d60; }
+  background: #86e878; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #158890; }
+  background: #796a3a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #dcd14a; }
+  background: #909792; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #1c5275; }
+  background: #3691b1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #9b37b1; }
+  background: #590c4c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #d05f52; }
+  background: #7b1a26; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7e96f3; }
+  background: #362528; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8b6388; }
+  background: #d161a9; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6b2e74; }
+  background: #a1d4d4; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c64b8a; }
+  background: #71ff3f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f78b36; }
+  background: #33f85f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c24690; }
+  background: #66ed15; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2c6130; }
+  background: #a42e0f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ad979d; }
+  background: #61ec76; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2751f4; }
+  background: #5c7a4f; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #aa4e4d; }
+  background: #4271f7; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f216f5; }
+  background: #502c9e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c589e9; }
+  background: #7a66cb; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #47c16b; }
+  background: #1a444e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #51332c; }
+  background: #7addfa; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #bd370a; }
+  background: #861e26; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #496820; }
+  background: #baeae5; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b6a30a; }
+  background: #7dd0d5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #fe2f6a; }
+  background: #c92d2f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c23441; }
+  background: #29a764; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0c74dd; }
+  background: #722c52; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #af6295; }
+  background: #13ddad; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #faee91; }
+  background: #72d893; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b4fcef; }
+  background: #58cc2e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #de4e09; }
+  background: #7ac472; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bdc0a4; }
+  background: #5660b7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e9954f; }
+  background: #0695bb; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f549cd; }
+  background: #b77b83; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #22bcd5; }
+  background: #098667; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f16cc7; }
+  background: #e9a2e6; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #996794; }
+  background: #abc3dd; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #3ce02c; }
+  background: #db1821; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #461228; }
+  background: #e1221a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f64661; }
+  background: #86b497; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5b5060; }
+  background: #3c1d2a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c6cc0f; }
+  background: #7b70a8; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d97b5a; }
+  background: #01f461; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #93d9a6; }
+  background: #1cc72d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6b4098; }
+  background: #032afd; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2d4979; }
+  background: #0e12a7; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2881a7; }
+  background: #1c9698; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4cea55; }
+  background: #0328e6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #4fae8d; }
+  background: #67741c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #84c4b2; }
+  background: #691f3d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #6f802b; }
+  background: #6d200c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b89fdc; }
+  background: #7c038c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6e306c; }
+  background: #5ea232; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e2b2cf; }
+  background: #495278; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9898,9 +9898,10 @@ table .bold-heading {
 .breadcumb-flex .page-heading-breadcrumb:first-child {
   display: flex;
   margin-right: 14px;
+  font-size: 20px !important;
   color: black; }
 .breadcumb-flex .page-heading-breadcrumb:last-child {
-  font-size: 15px;
+  font-size: 20px;
   font-family: "proxima-regular";
   display: flex;
   align-items: center;
