--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2959,6 +2959,7 @@ table .bold-heading {
   &:first-child {
    display: flex;
    margin-right: 14px;
+   font-size: 20px !important;
    // border-bottom: 1px solid #bdbdbd;
    // padding-bottom: 3px;
    // margin-bottom: 4px;
@@ -2966,7 +2967,7 @@ table .bold-heading {
   }
 
   &:last-child {
-   font-size: 15px;
+   font-size: 20px;
    font-family: "proxima-regular";
    display: flex;
    align-items: center;
