--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1194,12 +1194,12 @@ pre {
   .table td {
     padding: 0.75rem;
     vertical-align: top;
-    border-top: 1px solid #dee2e6; }
+    border-top: 1px solid #ECEDF2; }
   .table thead th {
     vertical-align: bottom;
-    border-bottom: 2px solid #dee2e6; }
+    border-bottom: 2px solid #ECEDF2; }
   .table tbody + tbody {
-    border-top: 2px solid #dee2e6; }
+    border-top: 2px solid #ECEDF2; }
 
 .table-sm th,
 .table-sm td {
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #28fb9f; }
+  background: #28de46; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ded21b; }
+  background: #fe8850; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #063651; }
+  background: #9116aa; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a66870; }
+  background: #89b479; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #bbd6a7; }
+  background: #871b90; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3f38fa; }
+  background: #b9a50a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f8eba2; }
+  background: #13d535; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d61c53; }
+  background: #2913ae; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #641ae7; }
+  background: #5e3c7a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7889c7; }
+  background: #20ca2b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9cf116; }
+  background: #0b2cb6; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #11c6d5; }
+  background: #5a8a33; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c58f59; }
+  background: #d2df25; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #04f04d; }
+  background: #32d3e8; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #31ac52; }
+  background: #66c80a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #26780f; }
+  background: #105399; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #6346da; }
+  background: #ee6580; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #63fb2c; }
+  background: #941150; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #24c498; }
+  background: #b915ab; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3ee3cf; }
+  background: #384c98; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #8abd7e; }
+  background: #66028d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #89b87c; }
+  background: #39a68a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #6757fe; }
+  background: #44a74c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #543ec1; }
+  background: #df1714; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #5d6afd; }
+  background: #5a6b84; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #861f04; }
+  background: #277428; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #aa2564; }
+  background: #b512a9; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #42920b; }
+  background: #b2a14c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #384842; }
+  background: #5ea147; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #78a0c6; }
+  background: #b5a41b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #737ff6; }
+  background: #112b12; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #07fb85; }
+  background: #38b946; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #571189; }
+  background: #391072; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d81d7d; }
+  background: #d728e5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7e5a64; }
+  background: #17baf0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b99b6a; }
+  background: #1dfcdf; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a2d065; }
+  background: #d47c22; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e60a39; }
+  background: #a387cc; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9cd37f; }
+  background: #fd2190; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e5a1f0; }
+  background: #f98c19; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f644b1; }
+  background: #471ce2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #74b075; }
+  background: #4fb279; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #edace2; }
+  background: #998de0; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #da7cd1; }
+  background: #6eb9d5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9fa091; }
+  background: #c957d5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b1bed5; }
+  background: #3df3d3; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c6f631; }
+  background: #63d05e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #86e878; }
+  background: #c591a0; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #796a3a; }
+  background: #2fa4cb; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #909792; }
+  background: #4d17dd; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #3691b1; }
+  background: #5260ed; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #590c4c; }
+  background: #7d7dc7; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #7b1a26; }
+  background: #6756fa; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #362528; }
+  background: #65b932; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d161a9; }
+  background: #a96bf0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a1d4d4; }
+  background: #37c275; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #71ff3f; }
+  background: #6c1184; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #33f85f; }
+  background: #ecf296; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #66ed15; }
+  background: #ced264; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a42e0f; }
+  background: #9ffdfe; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #61ec76; }
+  background: #fda320; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #5c7a4f; }
+  background: #c5d8a3; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4271f7; }
+  background: #950aa5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #502c9e; }
+  background: #ba6b5e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7a66cb; }
+  background: #6d1bc2; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #1a444e; }
+  background: #4fd9c3; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #7addfa; }
+  background: #3ef0b2; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #861e26; }
+  background: #957214; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #baeae5; }
+  background: #56d437; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #7dd0d5; }
+  background: #bc2662; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c92d2f; }
+  background: #7281e0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #29a764; }
+  background: #2231f7; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #722c52; }
+  background: #a42c57; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #13ddad; }
+  background: #607cd1; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #72d893; }
+  background: #bd9dc1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #58cc2e; }
+  background: #1033cb; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7ac472; }
+  background: #f9b3fd; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5660b7; }
+  background: #f6017a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #0695bb; }
+  background: #284198; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b77b83; }
+  background: #bd3c4b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #098667; }
+  background: #6c1364; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e9a2e6; }
+  background: #8a0e22; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #abc3dd; }
+  background: #8a50fa; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #db1821; }
+  background: #6347a9; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e1221a; }
+  background: #87ce69; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #86b497; }
+  background: #c49c24; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3c1d2a; }
+  background: #d93ca2; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #7b70a8; }
+  background: #5cc2ef; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #01f461; }
+  background: #c7571c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1cc72d; }
+  background: #bbadd9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #032afd; }
+  background: #6c4b3a; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0e12a7; }
+  background: #010df2; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #1c9698; }
+  background: #faaa58; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #0328e6; }
+  background: #d4f3d2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #67741c; }
+  background: #da4951; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #691f3d; }
+  background: #57dc52; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #6d200c; }
+  background: #3c6d39; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #7c038c; }
+  background: #6cd183; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #5ea232; }
+  background: #f2f0c9; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #495278; }
+  background: #926d6a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16300,7 +16300,7 @@ option {
   align-items: center;
   grid-template-columns: 1fr auto;
   grid-gap: 15px;
-  margin: 15px 0px;
+  margin: 10px 0px;
   padding: 14px 0px; }
 
 .assets-details-modal-title {
