--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #28de46; }
+  background: #e9ddc3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #fe8850; }
+  background: #25a205; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9116aa; }
+  background: #99a298; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #89b479; }
+  background: #1efe08; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #871b90; }
+  background: #cd1222; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b9a50a; }
+  background: #8a63d2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #13d535; }
+  background: #bc1950; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2913ae; }
+  background: #570d22; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #5e3c7a; }
+  background: #8562a0; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #20ca2b; }
+  background: #0befed; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #0b2cb6; }
+  background: #8c63c6; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5a8a33; }
+  background: #20ab8b; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d2df25; }
+  background: #c40788; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #32d3e8; }
+  background: #213d77; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #66c80a; }
+  background: #e2f25a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #105399; }
+  background: #1752a7; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ee6580; }
+  background: #0b8fcb; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #941150; }
+  background: #a5bc46; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b915ab; }
+  background: #32537d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #384c98; }
+  background: #f7c06b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #66028d; }
+  background: #0574be; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #39a68a; }
+  background: #d60d28; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #44a74c; }
+  background: #2707d4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #df1714; }
+  background: #3d774b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #5a6b84; }
+  background: #55ba69; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #277428; }
+  background: #b5a35a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b512a9; }
+  background: #6c7601; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b2a14c; }
+  background: #45c686; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #5ea147; }
+  background: #7ed6b1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b5a41b; }
+  background: #320aaa; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #112b12; }
+  background: #f8cb98; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #38b946; }
+  background: #7b2f7c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #391072; }
+  background: #735b6f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d728e5; }
+  background: #234395; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #17baf0; }
+  background: #ee651f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #1dfcdf; }
+  background: #ef9883; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d47c22; }
+  background: #cb9671; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #a387cc; }
+  background: #7340f2; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #fd2190; }
+  background: #bc3443; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f98c19; }
+  background: #4f847b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #471ce2; }
+  background: #b96b6e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4fb279; }
+  background: #5ef1b1; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #998de0; }
+  background: #eb4b70; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6eb9d5; }
+  background: #7270f7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c957d5; }
+  background: #2bc36f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3df3d3; }
+  background: #4ce9c7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #63d05e; }
+  background: #16cdbf; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c591a0; }
+  background: #140383; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2fa4cb; }
+  background: #9fb83d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #4d17dd; }
+  background: #4db7cf; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5260ed; }
+  background: #437ef3; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7d7dc7; }
+  background: #d444f0; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6756fa; }
+  background: #0403cd; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #65b932; }
+  background: #011468; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a96bf0; }
+  background: #69e89c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #37c275; }
+  background: #2f465d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6c1184; }
+  background: #9d8eed; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ecf296; }
+  background: #ead52a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ced264; }
+  background: #04328c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9ffdfe; }
+  background: #e8229f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #fda320; }
+  background: #5a1d23; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c5d8a3; }
+  background: #38e1fe; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #950aa5; }
+  background: #43924c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ba6b5e; }
+  background: #8a2768; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #6d1bc2; }
+  background: #313925; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4fd9c3; }
+  background: #bae7fd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3ef0b2; }
+  background: #1c58ae; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #957214; }
+  background: #9a9391; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #56d437; }
+  background: #f0608b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #bc2662; }
+  background: #cdb447; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #7281e0; }
+  background: #b4bc38; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #2231f7; }
+  background: #f67655; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a42c57; }
+  background: #b7e91b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #607cd1; }
+  background: #15876c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #bd9dc1; }
+  background: #130366; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1033cb; }
+  background: #86cb14; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f9b3fd; }
+  background: #e34821; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f6017a; }
+  background: #60cf9c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #284198; }
+  background: #cb8298; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #bd3c4b; }
+  background: #4d4637; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #6c1364; }
+  background: #fcba4c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8a0e22; }
+  background: #8b0174; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #8a50fa; }
+  background: #209b91; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6347a9; }
+  background: #90838b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #87ce69; }
+  background: #a91f2f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c49c24; }
+  background: #08c1ee; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d93ca2; }
+  background: #aa6195; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5cc2ef; }
+  background: #930b45; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c7571c; }
+  background: #c7a46f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #bbadd9; }
+  background: #1d3735; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6c4b3a; }
+  background: #41dac9; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #010df2; }
+  background: #7ee27f; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #faaa58; }
+  background: #7b963c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #d4f3d2; }
+  background: #84d136; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #da4951; }
+  background: #15d974; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #57dc52; }
+  background: #12e450; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3c6d39; }
+  background: #190319; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6cd183; }
+  background: #c3ceab; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f2f0c9; }
+  background: #eae105; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #926d6a; }
+  background: #8d7585; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9899,7 +9899,8 @@ table .bold-heading {
   display: flex;
   margin-right: 14px;
   font-size: 20px !important;
-  color: black; }
+  color: black;
+  font-weight: 600 !important; }
 .breadcumb-flex .page-heading-breadcrumb:last-child {
   font-size: 20px;
   font-family: "proxima-regular";
@@ -16300,8 +16301,8 @@ option {
   align-items: center;
   grid-template-columns: 1fr auto;
   grid-gap: 15px;
-  margin: 10px 0px;
-  padding: 14px 0px; }
+  margin: 0px 0px 10px;
+  padding: 0px 0px 14px; }
 
 .assets-details-modal-title {
   font-size: 20px;
