--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2964,6 +2964,7 @@ table .bold-heading {
    // padding-bottom: 3px;
    // margin-bottom: 4px;
    color: black;
+   font-weight: 600 !important;
   }
 
   &:last-child {
