--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -4268,8 +4268,8 @@ grid-gap: 15px;
   align-items: center;
   grid-template-columns: 1fr auto;
   grid-gap: 15px;
-  margin: 10px 0px;
-  padding:14px 0px;
+  margin: 0px 0px 10px;
+  padding:0px 0px 14px;
 }
 .assets-details-modal-title {
   font-size: 20px;
